fix portfolio image and header alignment

--- a/cv/static/cv/css/layout.css
+++ b/cv/static/cv/css/layout.css
@@ -351,7 +351,8 @@ ul#nav li.current a { color: #F06000; }
 #portfolio h2 {
    font: 16pt/24pt 'opensans-semibold', sans-serif;
    color: #6F6D6E;
-   margin-bottom: 10px;
+   margin-bottom: 15px;
+   padding-left: 20px;
 }
 
 #portfolio h3 {
